AB/nginx-anno-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: nginx-anno
spec:
  host: ab-nginxanno-test-project-2.apps.experteam.com.tw
  to:
    kind: Service
    name: nginx-1
