AB/nginx-route-1.yaml
apiVersion: v1
kind: Route
metadata:
  name: nginx-anno
spec:
  host: bgabnginx-test-project-2.apps.experteam.com.tw
  to:
    kind: Service
    name: nginx-1
